--- a/app/src/main/webapp/WEB-INF/web.xml
+++ b/app/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
     </context-param>
 
     <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>
+        <welcome-file>start.xhtml</welcome-file>
     </welcome-file-list>
 
     <servlet>
